--- a/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
+++ b/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
@@ -1,11 +1,13 @@
 ---
-title: The Sophomore Slump or Comeback of the Year
+title: Sophomore Slump or Comeback of the Year
 description: We spent four years building a modern layer underneath the old UI where nobody could see it. Then came the part we weren't ready for - making it visible.
 topics: [design-systems]
 date: 2026-02-22
 ---
 
-We spent four years establishing a design system that had to serve two very different things: a product with over two decades of history, and the new applications being built to replace it. The approach was deliberate: we brought the new system into the legacy codebase and matched the visual style so precisely that anything built with new components was indistinguishable from the old code. Modern stack underneath, same surface on top. Adoption grew quietly. Teams started using our components without us having to ask. Then we ran into the part we had not planned for. The invisible layer had to become visible.
+Three years in, we had a design system serving two very different contexts: a product with over two decades of history and all the legacy baggage that comes with it, and the new applications being built alongside it on modern stacks. For the legacy side, the strategy was camouflage. We brought the new system into the old codebase and matched the visual style so precisely that anything built with new components was indistinguishable from the old code. Teams did not have to learn a new tool or change how they worked. They just started using it. Adoption grew quietly. The numbers looked good. Then came year four, and a problem we had not prepared for: the invisible layer had to become visible.
+
+If you want the full story of how we got there, start with [Failing Forward at Design Systems](/notes/failing-forward-at-design-systems).
 
 ## The moment it had to become visible
 
