--- a/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
+++ b/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
@@ -5,7 +5,11 @@ topics: [design-systems]
 date: 2026-02-22
 ---
 
-Three years in, we had a design system serving two very different contexts: a product with over two decades of history and all the legacy baggage that comes with it, and the new applications being built alongside it on modern stacks. For the legacy side, the strategy was camouflage. We brought the new system into the old codebase and matched the visual style so precisely that anything built with new components was indistinguishable from the old code. Teams did not have to learn a new tool or change how they worked. They just started using it. Adoption grew quietly. The numbers looked good. Then came year four, and a problem we had not prepared for: the invisible layer had to become visible.
+We spent three years building a design system our users couldn't see. The design system running underneath our legacy product was deliberately invisible, new components matched to the old visual style so closely you couldn't tell the difference. That was on purpose. Before we could change what users saw, we needed engineers to actually adopt the thing.
+
+After three years, most teams had. They were building features we wouldn't have been able to ship before, on a modern stack that made the work faster and less brittle.
+
+Then came year four. At some point the foundation we had built in secret had to show itself. The visual updates had to ship. The old interfaces had to be replaced by something users could actually see was different. And suddenly we were dealing with a problem that had nothing to do with code: getting an entire organization to accept visible change to a product people had been using for years.
 
 If you want the full story of how we got there, start with [Failing Forward at Design Systems](/notes/failing-forward-at-design-systems).
 
