--- a/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
+++ b/content/notes/2026-02-22-sophomore-slump-or-comeback-of-the-year/index.mdx
@@ -11,6 +11,25 @@ After three years, most teams had. They were building features we wouldn't have 
 
 Then came year four. At some point the foundation we had built in secret had to show itself. The visual updates had to ship. The old interfaces had to be replaced by something users could actually see was different. And suddenly we were dealing with a problem that had nothing to do with code: getting an entire organization to accept visible change to a product people had been using for years.
 
+---
+
+We spent three years building a design system our users couldn't see. Our
+legacy product had a modern foundation growing underneath it, but every new
+component was matched to the old visual style so precisely that nothing
+looked different from the outside. That was deliberate. Before we could
+change what users saw, we needed engineers to actually adopt the new system
+first.
+
+By year three, most teams had. They were building features we couldn't have
+shipped before, on a modern stack that made the work faster and less
+brittle.
+
+Then came year four. The foundation we had built in secret had to show
+itself. Visual updates had to ship. Old interfaces had to go, and users
+were going to notice. And suddenly we were dealing with a problem that had
+nothing to do with code: getting an entire organization to accept visible
+change to a product people had been relying on for years.
+
 If you want the full story of how we got there, start with [Failing Forward at Design Systems](/notes/failing-forward-at-design-systems).
 
 ## The moment it had to become visible
